--- a/SuperArtwork/pom.xml
+++ b/SuperArtwork/pom.xml
@@ -27,6 +27,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
+            <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.2.6</version>
         </dependency>
         <dependency>
